apps/whoson/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoson
  namespace: whoson
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoson
  template:
    metadata:
      labels:
        app: whoson
    spec:
      containers:
        - name: whoson
          image: ghcr.io/adityarathod/whoson/whoson-server:1.0
          ports:
            - containerPort: 8080
