apps/whoson/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoson
  namespace: whoson
spec:
  type: ClusterIP
  selector:
    app: whoson
  ports:
    - port: 80
      targetPort: 8080
