apps/whoson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoson
  namespace: whoson
  annotations:
    tailscale.com/http-endpoint: enabled
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: whoson
      port:
        number: 80
  tls:
    - hosts:
        - whoson
